Add support for ML-DSA and ML-KEM