@@ -42,12 +42,14 @@ dependencies {
 
 compileJava {
     options.compilerArgs.addAll([
+        "--add-exports", "java.base/sun.security.pkcs=java.simple.security",
         "--add-exports", "java.base/sun.security.util=java.simple.security",
         "--add-exports", "java.base/sun.security.x509=java.simple.security"
     ])
 }
 compileTestJava {
     options.compilerArgs.addAll([
+        "--add-exports", "java.base/sun.security.pkcs=ALL-UNNAMED",
         "--add-exports", "java.base/sun.security.util=ALL-UNNAMED",
         "--add-exports", "java.base/sun.security.x509=ALL-UNNAMED"
     ])
@@ -56,6 +58,7 @@ compileTestJava {
 tasks.withType(Test).configureEach {
     useJUnitPlatform()
     jvmArgs (
+        "--add-exports", "java.base/sun.security.pkcs=ALL-UNNAMED",
         "--add-exports", "java.base/sun.security.util=ALL-UNNAMED",
         "--add-exports", "java.base/sun.security.x509=ALL-UNNAMED"
     )
